--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Joris Kraak's Git Achievements <img src='http://www.gravatar.com/avatar/e8419ba6a2d78def12cf72b445df988f'/></h2>
-Unlocked 13/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 92 points<br>
+Unlocked 13/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 95 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -18,6 +18,7 @@ Unlocked 13/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
+<li><div class="title">Apprentice Butcher (Level 2)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Goldsmith (Level 1)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Goldsmith (Level 2)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
@@ -44,20 +45,20 @@ Unlocked 13/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1195 status
-   1024 symbolic-ref
+   1205 status
+   1033 symbolic-ref
      79 diff
      63 add
-     52 commit
-     32 checkout
+     53 commit
+     33 checkout
      11 achievements
      10 mv
       7 svn
       7 reset
       6 stash
       6 branch
+      4 rebase
       4 config
-      3 rebase
       3 fetch
       2 Wed
       2 Thu
